# opencv_projects

./: .gitignore  README.md
camera_src/: CMakeLists.txt  Makefile  camera  camera.cpp
picture_src/: CMakeLists.txt  Makefile  picture  picture.cpp
